# nvrs

./: CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  config-table.html  configuration.html  features.html  n_keyfile.toml  nvrs.tape  nvrs.toml  searcher-c2a407aa.js  searchindex-d9f5be4d.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
book/: book.toml
book/src/: config-table.md  configuration.md  features.md  installation.md  keyfile-structure.md  nvrs.md  package-entries.md
main/: 404.html  credits.html  installation.html  keyfile-structure.html  toc-dd1a5be9.js  toc.html
main/theme/: custom.css
man/: nvrs.1
nix/: default.nix  hm-module.nix  shell.nix
src/: config.rs  error.rs  keyfile.rs  lib.rs
src/api/: github.rs
src/cli/: args.rs
v0.1.10/: nvrs.html  package-entries.html  print.html
