[package]
name = "nvrs"
version = "0.1.9"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
license = "MIT"
description = "🚦 fast new version checker for software releases 🦀"
repository = "https://github.com/adamperkowski/nvrs"
homepage = "https://nvrs.adamperkowski.dev"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
edition = "2024"
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "rustfmt.toml",
    "man/nvrs.1"
]

[features]
cli = ["clap", "colored", "futures"]
default = ["aur", "crates-io", "gitea", "github", "gitlab", "regex", "shell"]
aur = []
crates-io = []
gitea = []
github = []
gitlab = []
regex = ["dep:regex"]
shell = []

[[bin]]
name = "nvrs"
path = "src/cli/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "color", "error-context", "help", "std", "usage"], default-features = false , optional = true }
colored = { version = "3.0.0", optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }
regex = { version = "1.12.2", features = ["perf", "unicode"], default-features = false, optional = true }
reqwest = { version = "0.12.24", features = ["default-tls", "json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = { version = "1.0.145", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs", "io-std", "macros"], default-features = false }
toml = { version = "0.9.8", features = ["parse", "display", "serde"], default-features = false }

[dev-dependencies]
tokio-test = "0.4.5"
criterion = { version = "0.7.0", features = ["html_reports"] }
nvrs = { path = "." }

[profile.release]
lto = "fat"
codegen-units = 2
panic = "abort"
strip = true
opt-level = "z"
