[package]
name = "nvrs"
version = "0.1.10"
authors = ["june"]
license = "MIT"
description = "🚦 fast new version checker for software releases 🦀"
repository = "https://github.com/koibtw/nvrs"
homepage = "https://nvrs.koi.rip"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
edition = "2024"
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "rustfmt.toml",
    "man/nvrs.1"
]

[features]
cli = ["clap", "colored", "futures"]
default = ["aur", "crates-io", "gitea", "github", "gitlab", "regex", "shell"]
aur = []
crates-io = []
gitea = []
github = []
gitlab = []
regex = ["dep:regex"]
shell = []

[[bin]]
name = "nvrs"
path = "src/cli/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "color", "error-context", "help", "std", "usage"], default-features = false , optional = true }
colored = { version = "3.1.1", optional = true }
futures = { version = "0.3.32", default-features = false, optional = true }
regex = { version = "1.12.3", features = ["perf", "unicode"], default-features = false, optional = true }
reqwest = { version = "0.13.2", features = ["default-tls", "json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = { version = "1.0.149", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "fs", "io-std", "macros"], default-features = false }
toml = { version = "1.1.2", features = ["parse", "display", "serde"], default-features = false }

[dev-dependencies]
tokio-test = "0.4.5"
criterion = { version = "0.8.2", features = ["html_reports"] }
nvrs = { path = "." }

[profile.release]
lto = "fat"
codegen-units = 2
panic = "abort"
strip = true
opt-level = "z"
